syntax = "proto3";
package sigmoid.sigmoid;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "sigmoid/sigmoid/params.proto";

option go_package = "sigmoid/x/sigmoid/types";

// GenesisState defines the sigmoid module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
